samples/_failures_safe/1761638616_8dce13_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_6642823c.c: In function ‘main’:
./samples/SAFE/__tmp_6642823c.c:166:50: error: expected ‘)’ at end of input
  166 |         printf("%-20s %d\n", unique_words[i].word
      |               ~                                  ^
      |                                                  )
./samples/SAFE/__tmp_6642823c.c:166:9: error: expected declaration or statement at end of input
  166 |         printf("%-20s %d\n", unique_words[i].word
      |         ^~~~~~
./samples/SAFE/__tmp_6642823c.c:166:9: error: expected declaration or statement at end of input
